--- a/components/account-domain/pom.xml
+++ b/components/account-domain/pom.xml
@@ -5,10 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.ggreen</groupId>
-    <artifactId>account-db-data-service</artifactId>
+    <artifactId>account-domain</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-    <name>account-db-data-service</name>
+    <name>account-domain</name>
     <properties>
         <tomcat.version>8.5.23</tomcat.version>
         <maven.compiler.target>1.11</maven.compiler.target>
@@ -23,11 +22,6 @@
         <nanohttpd.version>2.3.1</nanohttpd.version>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>com.github.ggreen</groupId>
-            <artifactId>account-domain</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
