--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <maven.compiler.source>1.11</maven.compiler.source>
     </properties>
     <modules>
+        <module>components/account-domain</module>
         <module>applications/account-db-data-service</module>
     </modules>
     <dependencies>
