--- a/components/account-jdbc/pom.xml
+++ b/components/account-jdbc/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.ggreen</groupId>
-    <artifactId>account-domain</artifactId>
+    <artifactId>account-jdbc</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>account-domain</name>
+    <name>account-jdbc</name>
     <properties>
         <tomcat.version>8.5.23</tomcat.version>
         <maven.compiler.target>1.11</maven.compiler.target>
@@ -22,6 +22,11 @@
         <nanohttpd.version>2.3.1</nanohttpd.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.github.ggreen</groupId>
+            <artifactId>account-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
