--- a/components/account-rest-service/pom.xml
+++ b/components/account-rest-service/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.ggreen</groupId>
-    <artifactId>account-domain</artifactId>
+    <artifactId>account-rest-service</artifactId>
+    <name>account-rest-service</name>
     <version>1.0-SNAPSHOT</version>
-    <name>account-domain</name>
     <properties>
         <tomcat.version>8.5.23</tomcat.version>
         <maven.compiler.target>1.11</maven.compiler.target>
@@ -22,6 +22,16 @@
         <nanohttpd.version>2.3.1</nanohttpd.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.github.ggreen</groupId>
+            <artifactId>account-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ggreen</groupId>
+            <artifactId>account-jdbc</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
@@ -115,7 +125,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.github.ggreen.caching.rdms.AccountWebServer</mainClass>
+                            <mainClass>com.github.ggreen.caching.rdms.AccountApp</mainClass>
                         </manifest>
                         <manifestEntries>
                             <!-- Specified to allow Jetty to know its own Version ID -->
