--- a/applications/account-db-data-service/src/main/resources/jetty-logging.properties
+++ b/applications/account-db-data-service/src/main/resources/jetty-logging.properties
@@ -1,5 +1,7 @@
-org.eclipse.jetty.util.log.class=org.eclipse.jetty.util.log.StdErrLog
+org.eclipse.jetty.util.log.class=org.eclipse.jetty.util.log.Slf4jLog
 org.eclipse.jetty.LEVEL=INFO
+log4j.rootLogger=INFO
+rootLogger=INFO
 
 # Squelch noisy logging
 org.eclipse.jetty.websocket.jsr356.JsrBasicRemote.LEVEL=WARN
