--- a/applications/account-db-data-service/src/main/resources/jetty-logging.properties
+++ b/applications/account-db-data-service/src/main/resources/jetty-logging.properties
@@ -1,4 +1,4 @@
-org.eclipse.jetty.util.log.class=org.eclipse.jetty.util.log.Slf4jLog
+org.eclipse.jetty.util.log.class=org.eclipse.jetty.util.log.StdErrLog
 org.eclipse.jetty.LEVEL=INFO
 log4j.rootLogger=INFO
 rootLogger=INFO
