--- a/applications/account-db-data-service/pom.xml
+++ b/applications/account-db-data-service/pom.xml
@@ -23,6 +23,12 @@
         <nanohttpd.version>2.3.1</nanohttpd.version>
     </properties>
     <dependencies>
+         <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.12.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
