--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,10 @@
     <modules>
         <module>components/account-domain</module>
         <module>components/account-jdbc</module>
+        <module>components/account-geode</module>
         <module>components/account-rest-service</module>
         <module>components/account-jdbc-rest-service</module>
+        <module>components/account-geode-rest-service</module>
         <module>applications/account-db-migrations</module>
         <module>applications/account-db-data-service</module>
     </modules>
