--- a/applications/account-db-cache-batch-pipeline/pom.xml
+++ b/applications/account-db-cache-batch-pipeline/pom.xml
@@ -5,10 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.ggreen</groupId>
-    <artifactId>account-db-data-service</artifactId>
+    <artifactId>account-db-cache-batch-pipeline</artifactId>
+    <name>account-db-cache-batch-pipeline</name>
     <version>1.0-SNAPSHOT</version>
-
-    <name>account-db-data-service</name>
     <properties>
         <tomcat.version>8.5.23</tomcat.version>
         <maven.compiler.target>1.11</maven.compiler.target>
@@ -28,16 +27,9 @@
             <artifactId>log4j-core</artifactId>
             <version>2.12.1</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.12</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>com.github.ggreen</groupId>
-            <artifactId>account-jdbc-rest-service</artifactId>
+            <artifactId>account-jdbc</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -65,12 +57,9 @@
         </dependency>
         <dependency>
             <groupId>com.github.ggreen</groupId>
-            <artifactId>account-rest-service</artifactId>
+            <artifactId>account-geode</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
-
-
     </dependencies>
     <build>
         <resources>
