Fixing pipeline app shade output

--- a/applications/account-db-cache-batch-pipeline/pom.xml
+++ b/applications/account-db-cache-batch-pipeline/pom.xml
@@ -86,7 +86,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.github.ggreen.caching.rdms.AccountApp</mainClass>
+                            <mainClass>com.github.ggreen.caching.rdms.pipeline.AccountCacheBatchApp</mainClass>
                         </manifest>
                         <manifestEntries>
                             <!-- Specified to allow Jetty to know its own Version ID -->
