--- a/components/account-db-pipeline/pom.xml
+++ b/components/account-db-pipeline/pom.xml
@@ -2,30 +2,29 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.github.ggreen</groupId>
-    <artifactId>caching-rdms-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
-    <name>caching-rdms-parent</name>
+    <groupId>com.github.ggreen</groupId>
+    <artifactId>account-db-pipeline</artifactId>
+    <name>account-db-pipeline</name>
+    <version>1.0-SNAPSHOT</version>
     <properties>
+        <tomcat.version>8.5.23</tomcat.version>
         <maven.compiler.target>1.11</maven.compiler.target>
         <maven.compiler.source>1.11</maven.compiler.source>
+        <assertj.version>3.6.2</assertj.version>
     </properties>
-    <modules>
-        <module>components/account-domain</module>
-        <module>components/account-jdbc</module>
-        <module>components/account-geode</module>
-        <module>components/account-db-pipeline</module>
-        <module>components/account-rest-service</module>
-        <module>components/account-jdbc-rest-service</module>
-        <module>components/account-geode-rest-service</module>
-        <module>applications/account-db-migrations</module>
-        <module>applications/account-db-cache-batch-pipeline</module>
-        <module>applications/account-db-data-service</module>
-    </modules>
     <dependencies>
+         <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.12.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ggreen</groupId>
+            <artifactId>account-jdbc</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
@@ -49,7 +48,20 @@
             <version>5.6.2</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
