Adding streaming source for kafka

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>applications/account-db-migrations</module>
         <module>applications/account-db-cache-batch-pipeline</module>
         <module>applications/account-db-data-service</module>
+        <module>applications/account-db-source-stream-pipeline</module>
     </modules>
     <dependencies>
         <dependency>
