--- a/applications/account-db-source-stream-pipeline/pom.xml
+++ b/applications/account-db-source-stream-pipeline/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.ggreen</groupId>
-    <artifactId>account-db-cache-stream-pipeline</artifactId>
-    <name>account-db-cache-stream-pipeline</name>
+    <artifactId>account-db-source-stream-pipeline</artifactId>
+    <name>account-db-source-stream-pipeline</name>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <tomcat.version>8.5.23</tomcat.version>
@@ -22,6 +22,21 @@
         <nanohttpd.version>2.3.1</nanohttpd.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ggreen</groupId>
+            <artifactId>account-db-pipeline</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
          <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
