--- a/applications/account-db-data-service/pom.xml
+++ b/applications/account-db-data-service/pom.xml
@@ -23,6 +23,11 @@
         <nanohttpd.version>2.3.1</nanohttpd.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.github.ggreen</groupId>
+            <artifactId>account-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
          <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
@@ -37,7 +42,7 @@
         </dependency>
         <dependency>
             <groupId>com.github.ggreen</groupId>
-            <artifactId>account-jdbc-rest-service</artifactId>
+            <artifactId>account-jdbc-geode</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -69,6 +74,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.ggreen</groupId>
+            <artifactId>account-db-migrations</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
@@ -80,6 +91,11 @@
             </resource>
         </resources>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -208,6 +224,12 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
+                <version>2.22.0</version>
             </plugin>
         </plugins>
     </build>
