--- a/applications/account-db-migrations/pom.xml
+++ b/applications/account-db-migrations/pom.xml
@@ -57,6 +57,11 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
@@ -77,7 +82,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.github.ggreen.caching.rdms.migration.AccountMigrationApp</mainClass>
+                                    <mainClass>com.github.ggreen.caching.rdms.migration.AccountDbMigrationApp</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
