--- a/components/account-db-pipeline/pom.xml
+++ b/components/account-db-pipeline/pom.xml
@@ -61,6 +61,12 @@
 
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
+                <version>2.22.0</version>
+            </plugin>
         </plugins>
     </build>
 
