--- a/components/account-rest-service/pom.xml
+++ b/components/account-rest-service/pom.xml
@@ -24,6 +24,11 @@
     <dependencies>
         <dependency>
             <groupId>com.github.ggreen</groupId>
+            <artifactId>account-jdbc-geode</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ggreen</groupId>
             <artifactId>account-domain</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -102,6 +107,11 @@
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
