--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,9 @@
         <module>components/account-domain</module>
         <module>components/account-jdbc</module>
         <module>components/account-geode</module>
+        <module>components/account-jdbc-geode</module>
         <module>components/account-db-pipeline</module>
         <module>components/account-rest-service</module>
-        <module>components/account-jdbc-rest-service</module>
-        <module>components/account-geode-rest-service</module>
         <module>applications/account-db-migrations</module>
         <module>applications/account-db-cache-batch-pipeline</module>
         <module>applications/account-db-data-service</module>
@@ -51,7 +50,17 @@
             <version>5.6.2</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
+                <version>2.22.0</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
