Adding primary key, supporting save/upsert and bug fixes

--- a/applications/account-db-sink-stream-pipeline/pom.xml
+++ b/applications/account-db-sink-stream-pipeline/pom.xml
@@ -104,7 +104,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.github.ggreen.caching.rdms.pipeline.AccountCacheBatchApp</mainClass>
+                            <mainClass>com.github.ggreen.caching.rdms.pipeline.AccountGeodeSink</mainClass>
                         </manifest>
                         <manifestEntries>
                             <!-- Specified to allow Jetty to know its own Version ID -->
