--- a/applications/account-db-source-stream-pipeline/pom.xml
+++ b/applications/account-db-source-stream-pipeline/pom.xml
@@ -106,7 +106,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.github.ggreen.caching.rdms.pipeline.AccountCacheBatchApp</mainClass>
+                            <mainClass>com.github.ggreen.caching.rdms.pipeline.AccountDbSourceApp</mainClass>
                         </manifest>
                         <manifestEntries>
                             <!-- Specified to allow Jetty to know its own Version ID -->
