--- a/applications/account-db-data-service/pom.xml
+++ b/applications/account-db-data-service/pom.xml
@@ -80,6 +80,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.17.0</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
