--- a/components/account-geode/pom.xml
+++ b/components/account-geode/pom.xml
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>io.pivotal.services.dataTx</groupId>
             <artifactId>dataTx-geode-extensions-core</artifactId>
-            <version>2.2.0</version>
+            <version>2.3.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
 
