--- a/components/account-db-pipeline/pom.xml
+++ b/components/account-db-pipeline/pom.xml
@@ -43,11 +43,35 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.github.ggreen</groupId>
+            <artifactId>account-geode</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.6.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.pivotal.services.dataTx</groupId>
+            <artifactId>dataTx-geode-extensions-core</artifactId>
+            <version>2.3.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.17.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.pivotal.services.dataTx</groupId>
+            <artifactId>dataTx-geode-extensions-core</artifactId>
+            <version>2.3.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
