--- a/applications/account-db-cache-batch-pipeline/pom.xml
+++ b/applications/account-db-cache-batch-pipeline/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>com.github.nyla-solutions</groupId>
             <artifactId>nyla.solutions.core</artifactId>
-            <version>1.3.2-SNAPSHOT</version>
+            <version>1.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
