--- a/applications/account-db-sink-stream-pipeline/pom.xml
+++ b/applications/account-db-sink-stream-pipeline/pom.xml
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>com.github.nyla-solutions</groupId>
             <artifactId>nyla.solutions.core</artifactId>
-            <version>1.3.2-SNAPSHOT</version>
+            <version>1.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
