--- a/components/account-db-pipeline/pom.xml
+++ b/components/account-db-pipeline/pom.xml
@@ -34,7 +34,8 @@
         <dependency>
             <groupId>com.github.nyla-solutions</groupId>
             <artifactId>nyla.solutions.core</artifactId>
-            <version>1.3.2-SNAPSHOT</version>
+            <version>1.4.0</version>
+<!--            <version>1.4.0</version>-->
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -56,7 +57,8 @@
         <dependency>
             <groupId>io.pivotal.services.dataTx</groupId>
             <artifactId>dataTx-geode-extensions-core</artifactId>
-            <version>2.3.0-SNAPSHOT</version>
+<!--            <version>2.3.0</version>-->
+            <version>2.3.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -68,7 +70,7 @@
         <dependency>
             <groupId>io.pivotal.services.dataTx</groupId>
             <artifactId>dataTx-geode-extensions-core</artifactId>
-            <version>2.3.0-SNAPSHOT</version>
+            <version>2.3.0</version>
             <scope>compile</scope>
         </dependency>
 
