--- a/components/account-geode/pom.xml
+++ b/components/account-geode/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>com.github.nyla-solutions</groupId>
             <artifactId>nyla.solutions.core</artifactId>
-            <version>1.3.2-SNAPSHOT</version>
+            <version>1.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>io.pivotal.services.dataTx</groupId>
             <artifactId>dataTx-geode-extensions-core</artifactId>
-            <version>2.3.0-SNAPSHOT</version>
+            <version>2.3.0</version>
             <scope>compile</scope>
         </dependency>
 
