--- a/components/account-jdbc/pom.xml
+++ b/components/account-jdbc/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>com.github.nyla-solutions</groupId>
             <artifactId>nyla.solutions.core</artifactId>
-            <version>1.3.2-SNAPSHOT</version>
+            <version>1.4.0</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
